--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,15 @@
-- clean: []
-- link: {}
-- shell: []
+- defaults:
+    link:
+      relink: true
+      create: true
+
+- clean: ['~']
+
+- link:
+    ~/.zshrc: configs/zsh/.zshrc
+    ~/.config/starship.toml: configs/starship/starship.toml
+    ~/.config/yazi: configs/yazi
+    ~/.config/bat/config: configs/bat/bat.conf
+
+- shell:
+  - [git submodule update --init --recursive, Installing submodules]
