--- a/configs/starship/starship.toml
+++ b/configs/starship/starship.toml
@@ -1,9 +1,19 @@
+# Main prompt format (Left side)
+format = """$all"""
+
+# Right side prompt format
+right_format = """$time"""
+
 [time]
 disabled = false
+# %I = Hour (01-12), %M = Minute, %p = AM/PM
+time_format = "%I:%M %p" 
+format = '[    $time ]($style)'
+style = "bold purple"
 
 [character]
-success_symbol = '[|ψ❯](bold green) '
-error_symbol = '[✗](bold red) '
+success_symbol = '[➜](bold green) '
+error_symbol = '[✖](bold red) '
 
 [custom.bash]
 command = "echo bash"
@@ -11,3 +21,6 @@ description = "Displays 'bash' if in bash shell"
 when = '[ "$STARSHIP_SHELL" = "bash" ]'
 format = '[$output](cyan bold) '
 disabled = false
+
+[line_break]
+disabled = true
