--- a/configs/starship/starship.toml
+++ b/configs/starship/starship.toml
@@ -1,3 +1,6 @@
+# Get editor completions based on the config schema
+"$schema" = 'https://starship.rs/config-schema.json'
+
 # Main prompt format (Left side)
 format = """$all"""
 
