--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,7 +21,7 @@
       force: true
       backup: true
     ~/.config/bat/config: configs/bat/bat.conf
-    ~/.shell: configs/shell
+    ~/.config/shell: configs/shell
     ~/.zshrc:
       path: configs/zsh/.zshrc
       force: true
